PromoCalculator/buildLog.log
g++ -O3 -DNDEBUG -fpermissive -g -w -std=c++11 -Wall -Lc:\mingw\lib -Ic:\mingw\include -D_WIN32_WINNT=0x0601 -DWINVER=0x0601 -DMSVCRT_VERSION=710   -c -o Barcodes.o Barcodes.cpp
g++ -O3 -DNDEBUG -fpermissive -g -w -std=c++11 -Wall -Lc:\mingw\lib -Ic:\mingw\include -D_WIN32_WINNT=0x0601 -DWINVER=0x0601 -DMSVCRT_VERSION=710   -c -o BaseSystem.o BaseSystem.cpp
g++ -O3 -DNDEBUG -fpermissive -g -w -std=c++11 -Wall -Lc:\mingw\lib -Ic:\mingw\include -D_WIN32_WINNT=0x0601 -DWINVER=0x0601 -DMSVCRT_VERSION=710   -c -o BaseTypes.o BaseTypes.cpp
g++ -O3 -DNDEBUG -fpermissive -g -w -std=c++11 -Wall -Lc:\mingw\lib -Ic:\mingw\include -D_WIN32_WINNT=0x0601 -DWINVER=0x0601 -DMSVCRT_VERSION=710   -c -o Cart.o Cart.cpp
Cart.cpp:28:1: error: 'mutex' in namespace 'std' does not name a type
 std::mutex cart_sendtopos_mutex ;
 ^
Cart.cpp: In member function 'long int Cart::sendToPos(long unsigned int, std::string, std::string)':
Cart.cpp:423:9: error: 'cart_sendtopos_mutex' was not declared in this scope
         cart_sendtopos_mutex.lock() ;
         ^
make: *** [Cart.o] Error 1
